--- a/dvc.yaml
+++ b/dvc.yaml
@@ -31,7 +31,7 @@ stages:
     outs:
     - lgbm_model.pkl
     - tfidf_vectorizer.pkl
-  
+
   model_evaluation:
     cmd: python src/model/model_evaluation.py
     deps:
@@ -41,4 +41,10 @@ stages:
     - data/interim/test_processed.csv
     - src/model/model_evaluation.py
     outs:
-    - experiment_info.json  
+    - experiment_info.json
+
+  model_registration:
+    cmd: python src/model/register_model.py
+    deps:
+    - experiment_info.json
+    - src/model/register_model.py
